[fix] Double border seperation

--- a/components/equipped/equipped.scss
+++ b/components/equipped/equipped.scss
@@ -96,8 +96,30 @@
       width: 50px;
     }
 
-    .row:last-of-type {
+    .row {
+      border-bottom: 1px solid rgba(palette(white), 0.1);
       margin-bottom: 0;
+
+      &:after {
+        background: none;
+        border-bottom: 1px solid rgba(palette(black), 0.2);
+        bottom: 0px;
+        content: "";
+        display: block;
+        left: 0px;
+        pointer-events: none;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+      }
+    }
+
+    .row:last-of-type {
+      border: 0;
+
+      &:after {
+        border: 0;
+      }
     }
 
     .stat {
@@ -140,10 +162,6 @@
       position: absolute;
       top: 0;
       z-index: 1;
-    }
-
-    &.week .fill {
-      background: rgba(palette(primary, light), .1);
     }
   }
 }
